--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,7 +7,11 @@ authors = [
 ]
 readme = "README.md"
 requires-python = ">=3.11"
-dependencies = []
+dependencies = [
+    "jinja2>=3.1.4",
+    "pandas-stubs>=2.2.3.241009",
+    "pandas>=2.2.3",
+]
 
 [tool.uv]
 package = true
