--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,8 @@ dependencies = [
     "jinja2>=3.1.4",
     "pandas-stubs>=2.2.3.241009",
     "pandas>=2.2.3",
+    "pyspark==3.5.0",
+    "databricks-sdk>=0.38.0",
 ]
 
 [tool.uv]
